--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -127,6 +127,7 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     
     <!-- Custom JS -->
+     <script src="{{ url_for('static', filename='js/navigation.js') }}"></script>
     <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
     <script src="{{ url_for('static', filename='js/realtime.js') }}"></script>
 </body>
