Saving estable version 1.5, partial implementation of modals

--- a/Proyecto_1_Diseno/templates/frontend_historical.html
+++ b/Proyecto_1_Diseno/templates/frontend_historical.html
@@ -91,7 +91,7 @@
     <!-- Contenedor principal -->
     <div id="mainContent" class="main-content">
         <div class="container">
-            <h1>Rastreador {{ name }} - Histórico</h1>
+            <h1>Rastreador version estable 1.5{{ name }} - Histórico</h1>
 
             <!-- Historical query section -->
             <div class="historical-section">
