--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -86,7 +86,7 @@
     <!-- Contenedor principal -->
     <div id="mainContent" class="main-content">
         <div class="container">
-            <h1>Rastreador {{ name }}</h1>
+            <h1>Rastreador versión estable 1.5{{ name }}</h1>
 
             <!-- Controls -->
             <div class="controls">
